# specable

./: README.md  pyproject.toml
specable/: __init__.py  dicts.py  inout.py  interface.py  specable.py
tests/integration/: beer.yaml  champagne.yaml  test.py
tests/integration/outdoor/: __init__.py  lemonade.py
tests/integration/spaeti/: __init__.py  beer.py  beverage.py
tests/integration/spaeti/backroom/: __init__.py  champagne.py
tests/unit/: test_dicts.py
